src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_5_2.deca
// Description:
//    regle 2.5 condition
//
// Resultats:
//    Ligne 7: Field type cannot be void.
class A {
    void a;
}